--- a/OnlineShoppingProject/src/main/resources/application.properties
+++ b/OnlineShoppingProject/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/javabatch?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/vikas?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Vikas@12345
 
