--- a/OnlineShoppingProject/src/main/resources/application.properties
+++ b/OnlineShoppingProject/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/data?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/emp?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Naik@924200
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
