--- a/OnlineShoppingProject/src/main/resources/application.properties
+++ b/OnlineShoppingProject/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/shiwani?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
+logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+logging.pattern.file= "%d{yyyy-MM-dd } [%thread] %-5level %logger{36} - %msg%n"
+logging.file.name=E:/Log/applocation.log
  
